# ncharIndex

./: CMakeLists.txt  NcharIndex.cpp  NcharIndex.h  NcharIndexM.cpp  NcharIndexM.h  README.md  buildIndex.cpp  csv.hpp  indexingtest.cpp  indexingtest.py  indexingtestM.cpp  queryIndex.cpp
